Adding the user details api and otp verification success user details list
