# public/swagger/swagger.yaml
@@ -276,8 +276,34 @@ paths:
             properties:
               phone_no:
                 type: string 
-              otp:
+              otpfrom:
                 type: string    
+      responses:
+        '200':
+          description: successful operation
+        '400':
+          description: Bad request  
+
+  /mobileUser/get_user_details:
+    post:
+      tags:
+        - mobileUser/get_user_details
+      summary: mobileUser get_user_details 
+      description: 'mobileUser get_user_details'
+      operationId: mobileUser get_user_details
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "The body will contain phone_no and otp"
+          schema:
+            type: object
+            properties:
+              uid:
+                type: string  
       responses:
         '200':
           description: successful operation
